// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dry-run plan against fake inventory (k3s) > complete matching inventory -> all no-ops, nothing to do (mks: except its always-Create volumes) 1`] = `
"Plan: 0 to create, 0 to delete, 0 to update, 0 to replace, 6 unchanged.

  = kumulo-prod-eu-worker-general-0
  = kumulo-prod-eu-worker-general-1
  = kumulo-prod-eu-worker-general-2
  = kumulo-prod-eu-worker-general-3
  = kumulo-prod-eu-worker-highmem-0
  = kumulo-prod-eu-worker-highmem-1"
`;

exports[`dry-run plan against fake inventory (k3s) > drifted inventory -> replace-needs-confirm, never a silent apply 1`] = `
"Plan: 0 to create, 0 to delete, 0 to update, 6 to replace, 0 unchanged.

  -/+ kumulo-prod-eu-worker-general-0 (config-hash drifted from desired spec)
  -/+ kumulo-prod-eu-worker-general-1 (config-hash drifted from desired spec)
  -/+ kumulo-prod-eu-worker-general-2 (config-hash drifted from desired spec)
  -/+ kumulo-prod-eu-worker-general-3 (config-hash drifted from desired spec)
  -/+ kumulo-prod-eu-worker-highmem-0 (config-hash drifted from desired spec)
  -/+ kumulo-prod-eu-worker-highmem-1 (config-hash drifted from desired spec)"
`;

exports[`dry-run plan against fake inventory (k3s) > empty inventory -> all creates 1`] = `
"Plan: 6 to create, 0 to delete, 0 to update, 0 to replace, 0 unchanged.

  + kumulo-prod-eu-worker-general-0
  + kumulo-prod-eu-worker-general-1
  + kumulo-prod-eu-worker-general-2
  + kumulo-prod-eu-worker-general-3
  + kumulo-prod-eu-worker-highmem-0
  + kumulo-prod-eu-worker-highmem-1"
`;

exports[`dry-run plan against fake inventory (k3s) > partial inventory -> mix of no-op and create 1`] = `
"Plan: 5 to create, 0 to delete, 0 to update, 0 to replace, 1 unchanged.

  + kumulo-prod-eu-worker-general-1
  + kumulo-prod-eu-worker-general-2
  + kumulo-prod-eu-worker-general-3
  + kumulo-prod-eu-worker-highmem-0
  + kumulo-prod-eu-worker-highmem-1
  = kumulo-prod-eu-worker-general-0"
`;

exports[`dry-run plan against fake inventory (k3s-hetzner) > complete matching inventory -> all no-ops, nothing to do (mks: except its always-Create volumes) 1`] = `
"Plan: 0 to create, 0 to delete, 0 to update, 0 to replace, 3 unchanged.

  = kumulo-prod-fsn-worker-general-0
  = kumulo-prod-fsn-worker-general-1
  = kumulo-prod-fsn-worker-general-2"
`;

exports[`dry-run plan against fake inventory (k3s-hetzner) > drifted inventory -> replace-needs-confirm, never a silent apply 1`] = `
"Plan: 0 to create, 0 to delete, 0 to update, 3 to replace, 0 unchanged.

  -/+ kumulo-prod-fsn-worker-general-0 (config-hash drifted from desired spec)
  -/+ kumulo-prod-fsn-worker-general-1 (config-hash drifted from desired spec)
  -/+ kumulo-prod-fsn-worker-general-2 (config-hash drifted from desired spec)"
`;

exports[`dry-run plan against fake inventory (k3s-hetzner) > empty inventory -> all creates 1`] = `
"Plan: 3 to create, 0 to delete, 0 to update, 0 to replace, 0 unchanged.

  + kumulo-prod-fsn-worker-general-0
  + kumulo-prod-fsn-worker-general-1
  + kumulo-prod-fsn-worker-general-2"
`;

exports[`dry-run plan against fake inventory (k3s-hetzner) > partial inventory -> mix of no-op and create 1`] = `
"Plan: 2 to create, 0 to delete, 0 to update, 0 to replace, 1 unchanged.

  + kumulo-prod-fsn-worker-general-1
  + kumulo-prod-fsn-worker-general-2
  = kumulo-prod-fsn-worker-general-0"
`;

exports[`dry-run plan against fake inventory (ovh-mks) > complete matching inventory -> all no-ops, nothing to do (mks: except its always-Create volumes) 1`] = `
"Plan: 1 to create, 0 to delete, 0 to update, 0 to replace, 3 unchanged.

  + volume/staging-eu-data
  = kumulo-staging-eu-worker-general-0
  = bucket/staging-eu-backups
  = bucket/staging-eu-logs"
`;

exports[`dry-run plan against fake inventory (ovh-mks) > drifted inventory -> replace-needs-confirm, never a silent apply 1`] = `
"Plan: 1 to create, 0 to delete, 0 to update, 3 to replace, 0 unchanged.

  + volume/staging-eu-data
  -/+ kumulo-staging-eu-worker-general-0 (config-hash drifted from desired spec)
  -/+ bucket/staging-eu-backups (region or encryption changed (immutable, delete+recreate))
  -/+ bucket/staging-eu-logs (region or encryption changed (immutable, delete+recreate))"
`;

exports[`dry-run plan against fake inventory (ovh-mks) > empty inventory -> all creates 1`] = `
"Plan: 4 to create, 0 to delete, 0 to update, 0 to replace, 0 unchanged.

  + kumulo-staging-eu-worker-general-0
  + volume/staging-eu-data
  + bucket/staging-eu-backups
  + bucket/staging-eu-logs"
`;

exports[`dry-run plan against fake inventory (ovh-mks) > partial inventory -> mix of no-op and create 1`] = `
"Plan: 2 to create, 0 to delete, 0 to update, 0 to replace, 2 unchanged.

  + volume/staging-eu-data
  + bucket/staging-eu-logs
  = kumulo-staging-eu-worker-general-0
  = bucket/staging-eu-backups"
`;

exports[`dry-run plan against fake inventory (upcloud-uks) > complete matching inventory -> all no-ops, nothing to do (mks: except its always-Create volumes) 1`] = `
"Plan: 0 to create, 0 to delete, 0 to update, 0 to replace, 1 unchanged.

  = kumulo-staging-de-worker-general-0"
`;

exports[`dry-run plan against fake inventory (upcloud-uks) > drifted inventory -> replace-needs-confirm, never a silent apply 1`] = `
"Plan: 0 to create, 0 to delete, 0 to update, 1 to replace, 0 unchanged.

  -/+ kumulo-staging-de-worker-general-0 (config-hash drifted from desired spec)"
`;

exports[`dry-run plan against fake inventory (upcloud-uks) > empty inventory -> all creates 1`] = `
"Plan: 1 to create, 0 to delete, 0 to update, 0 to replace, 0 unchanged.

  + kumulo-staging-de-worker-general-0"
`;

exports[`dry-run plan against fake inventory (upcloud-uks) > partial inventory -> mix of no-op and create 1`] = `
"Plan: 0 to create, 0 to delete, 0 to update, 0 to replace, 1 unchanged.

  = kumulo-staging-de-worker-general-0"
`;
